--- a/traq.css
+++ b/traq.css
@@ -1,58 +1,83 @@
 /* Colour Palette  - changed the colours a bit for better reading/look*/
 :root {
-    --kaitoke-green: #003e29;
-    --como: #d5e7b8;
-    --sandal: #845710;
-    --walnut: #633e31;
-    --grey: #8da290;
-    }
+  --formbg: #22577A;
+  --formtextcol: #FFFFFF;
+  --textcol: #22577A;
+  --buttonbg: #80ED99;
+  --btnhoverbg: #57CC99;
+  --bordercol: #38A3A5;
+  --bgcolor: #C7F9CC;
+}
 
 /* Styles: */
 
-html{
-    scroll-behavior: smooth;
-}
-body{
-    text-align: center;
-    background-color: var(--como);
-    color: var(--sandal);
-}
-h1,h2,h3{
-    color: var(--walnut);
-}
-#header{
-    display: flex;
-    position: sticky;
-    margin: 0;
-    padding: 10px;
-    top: 0%;
-    right: 0%;
-    left: 0%;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: var(--grey);
-    z-index: 5;
+html {
+  scroll-behavior: smooth;
 }
 
-#langbutton-en{
-    background-color: var(--grey);
-    border: none;
-    color: var(--kaitoke-green);
-    font-size: 11px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    padding: 5px;
-    margin: 5px;
-    border-radius: 25px;
-    transition: 0.3s;
-
-
+body {
+  text-align: center;
+  background-color: var(--bgcolor);
+  color: var(--textcol);
+  font-family: 'Roboto', sans-serif;
 }
 
-button,input{
-  background-color: var(--grey);
+h1,
+h2,
+h3 {
+  color: var(--textcol);
+}
+
+#header {
+display: flex;
+position: sticky;
+margin: 0;
+padding: 10px;
+top: 0%;
+right: 0%;
+left: 0%;
+justify-content: space-evenly;
+align-items: center;
+background-color: var(--btnhoverbg);
+z-index: 5;
+border-radius: 21px;
+box-shadow: 5px 5px 5px grey;
+}
+
+#langbutton-en {
+  background-color: var(--buttonbg);
   border: none;
   color: var(--kaitoke-green);
+  font-size: 11px;  
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  padding: 7px;
+  margin: 5px;
+  border-radius: 25px;
+  transition: 0.3s;
+  position: absolute;
+  right: 8%;
+  top: 7%;
+}
+
+select,
+option {
+  background-color: var(--bgcolor);
+  border: none;
+  color: var(--textcol);
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  padding: 1px;
+  margin: auto;
+  border-radius: 25px;
+}
+
+button,
+  input[type="submit"] {
+  background-color: var(--buttonbg);
+  border: none;
+  color: var(--textcol);
   font-size: 10px;
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
@@ -64,112 +89,127 @@ button,input{
   width: 7.75%;
   height: 1.5rem;
 }
+
 button:hover {
-  background-color: var(--sandal);
-              }
-input:hover {
-  background-color: var(--sandal);
-              }
+  background-color: var(--btnhoverbg);
+  box-shadow: 10px 10px 20px grey;
+  color: var(--textcol);
+}
+
+  input[type="submit"]:hover {
+  background-color: var(--btnhoverbg);
+  box-shadow: 10px 10px 20px grey;
+  color: var(--textcol);
+}
+
 #langbutton-en:hover {
-  background-color: var(--sandal);
-              }
+  background-color: var(--btnhoverbg);
+  box-shadow: 10px 10px 20px grey;
+  color: var(--textcol);
+}
+
 #langbutton-fr:hover {
-  background-color: var(--sandal);
-              }
-#langbutton-fr{
-  background-color: var(--grey);
+  background-color: var(--btnhoverbg);
+  box-shadow: 10px 10px 20px grey;
+  color: var(--textcol);
+}
+
+#langbutton-fr {
+  background-color: var(--buttonbg);
   border: none;
-  color: var(--kaitoke-green);
+  color: var(--textcol);
   font-size: 11px;
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
-  padding: 5px;
+  padding: 7px;
   margin: 5px;
   border-radius: 25px;
   transition: 0.3s;
-
+  position: absolute;
+  right: 0%;
+  top: 7%;
 }
 
-footer{
-    position: relative;
-    bottom: 0;
-}
-.sites{
-    color: var(--walnut);
-}
-#form{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-}
-#questions{
-    display: flex;
-    background-color: var(--grey);
-    border-radius: 7px;
-    width: 80%;
-    height: 30rem;
-    align-self: center;
-}
-#website{
-  background-color: var(--grey);
-  border-radius: 10px;
-  width: 40%;
-  padding: 30px;
-  align-self: center;
-  max-width: 150px;
+footer {
   position: relative;
+  bottom: 0;
+}
+
+.sites {
+  color: var(--textcol);
+}
+
+.question {
+  margin-bottom: 5px;
+  text-align: center;
+  /* Align text inside the question div to the left */
+}
+
+.question p {
+  margin-bottom: 5px;
+  /* Add some space below each question */
+}
+
+.question label,
+.question select {
+  display: inline-block;
+  /* Display labels and selects inline */
 }
 
 
-fieldset {
-  border: none;
-    margin: 0;
-    padding: 0;
-}
-
-fieldset label {
-    display: block;
-    margin-bottom: 10px; /* Add space between each question */
-    margin-left: 10px;
-
-}
-
-fieldset label input,
-fieldset label select {
-    margin-right: 5px; /* Add space between the input/select and the label text */
-
+#form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 #questions {
-    display: flex;
-    flex-direction: column; /* Change to column layout */
-    background-color: var(--grey);
-    border-radius: 7px;
-    width: 80%;
-    max-width: 600px; /* Limit the maximum width for better readability */
-    margin: 0 auto; /* Center the questions */
-    padding: 20px; /* Add some padding for better appearance */
+  display: flex;
+  background-color: var(--formbg);
+  color: var(--formtextcol);
+  border-radius: 7px;
+  border: 3px solid var(--bordercol);
+  width: 80%;
+  height: 53rem;
+  max-width: 600px;
+  /* Limit the maximum width for better readability */
+  margin: 0 auto;
+  /* Center the questions */
+  padding: 15px;
+  /* Add some padding for better appearance */
 }
 
-#projectdesc{
-    left: 25%;
-    right: 25%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    align-items: center;
+#projectdesc {
+  padding-top: 1.5rem;
+  left: 25%;
+  right: 25%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
 }
-input{
-    position: relative;
-    width: 8.75%;
-    height: 1.7rem;
-    border-radius: 5px;
-    left: 15vw;
+
+input[type="submit"] {
+  position: relative;
+  width: 8.75%;
+  height: 1.7rem;
+  border-radius: 5px;
+  bottom: 1rem;
+  top: 0.3rem;
+}
+
+input[type="number"] {
+  position: relative;
+  background-color: var(--bgcolor);
+  color: var(--textcol);
+  width: 15%;
+  height: 1.2rem;
+  border-radius: 5px;
 }
 
 a:link {
-  color: var(--walnut);
+  color: var(--textcol);
   background-color: transparent;
   text-decoration: none;
   font-weight: bold;
@@ -177,16 +217,57 @@ a:link {
 
 
 a:visited {
-  color: var(--sandal);
+  color: var(--textcol);
   background-color: transparent;
 }
 
 a:hover {
-  color: var(--sandal);
+  color: var(--textcol);
   background-color: transparent;
 }
 
 a:active {
-  color:var(--walnut);
+  color: var(--textcol);
   background-color: transparent;
 }
+
+#box{
+  position: relative;
+  background-color: var(--formbg);
+  color: var(--formtextcol);
+  border-radius: 7px;
+  border: 3px solid var(--bordercol);
+  padding-top: 5px;
+  height: 13rem;
+  width: 45%;
+  left: 27%;
+  bottom: 0.5rem;
+}
+
+footer{
+  padding-left: 15rem;
+  padding-right: 15rem;
+}
+
+#topbtn{
+  position: relative;
+  width: 15%;
+  height: 1.7rem;
+  border-radius: 7px;
+}
+
+
+  #webcontainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+  }
+
+  .website{
+    position: relative;
+    left: 29%;
+    border-radius: 7px;
+    background-color: var(--formbg);
+    color: var(--formtextcol);
+  }
