--- a/traq.css
+++ b/traq.css
@@ -208,7 +208,10 @@ input[type="number"] {
   width: 15%;
   height: 1.2rem;
   border-radius: 5px;
+  margin: auto; /* Center horizontally */
+  display: block; /* Ensures it takes full width */
 }
+
 
 #sitetraqdesc{
   padding-left: 15rem;
