--- a/traq.css
+++ b/traq.css
@@ -132,6 +132,10 @@ button:hover {
 
 footer {
   position: relative;
+  width: 65%;
+  padding-top: 1.5rem;
+  margin: 0;
+  left: 18.25%;
   bottom: 0;
 }
 
@@ -214,8 +218,11 @@ input[type="number"] {
 
 
 #sitetraqdesc{
-  padding-left: 15rem;
-  padding-right: 15rem;
+  position: relative;
+  width: 65%;
+  padding-top: 1.5rem;
+  margin: 0;
+  left: 18.25%;
 }
 
 a:link {
@@ -276,7 +283,7 @@ footer{
 
   .website{
     position: relative;
-    left: 15%;
+    left: 15vw;
     border-radius: 7px;
     background-color: var(--formbg);
     color: var(--formtextcol);
