--- a/traq.css
+++ b/traq.css
@@ -132,10 +132,6 @@ button:hover {
 
 footer {
   position: relative;
-  width: 65%;
-  padding-top: 1.5rem;
-  margin: 0;
-  left: 18.25%;
   bottom: 0;
 }
 
@@ -218,11 +214,8 @@ input[type="number"] {
 
 
 #sitetraqdesc{
-  position: relative;
-  width: 65%;
-  padding-top: 1.5rem;
-  margin: 0;
-  left: 18.25%;
+  padding-left: 15rem;
+  padding-right: 15rem;
 }
 
 a:link {
@@ -283,7 +276,7 @@ footer{
 
   .website{
     position: relative;
-    left: 15vw;
+    left: 15%;
     border-radius: 7px;
     background-color: var(--formbg);
     color: var(--formtextcol);
